git submodule add hexo-theme-next offical and choose Pisces

--- a/source/about/index.html
+++ b/source/about/index.html
@@ -31,7 +31,7 @@
 <div>
     <marquee width="80%" height="68px" direction="left" scrollamount="5"
         onmouseover="this.stop()" onmouseout="this.start()">   
-		<a href="http://www.qq.com/404/"><h1>一起寻找丢失的孩子们<h1></a>
+		<a href="http://www.qq.com/404/">一起寻找丢失的孩子们</a>
     </marquee>
 </div>
 
